<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.others.HelpActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:gravity="center_horizontal"
        android:text="@string/ah_title"
        android:textAppearance="?textAppearanceHeadline4"
        android:textColor="?colorPrimary"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/ah_0"
                android:textColor="?colorOnBackground"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:textColor="?colorOnBackground"
                android:text="@string/ah_1"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="170dp"
                android:layout_height="110dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:src="@drawable/card_ez_bar"
                app:tintMode="multiply"
                android:tint="?colorOnBackground"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/ah_2"
                android:textSize="20sp"
                android:textColor="?colorOnBackground"

                />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="170dp"
                android:layout_height="110dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:src="@drawable/card_disk"
                app:tintMode="multiply"
                android:tint="?colorOnBackground"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textColor="?colorOnBackground"
                android:gravity="center"
                android:text="@string/ah_3"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:textColor="?colorOnBackground"
                android:text="@string/ah_4"
                android:textSize="15sp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="170dp"
                android:layout_height="110dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:src="@drawable/card_weight_calc"
                app:tintMode="multiply"
                android:tint="?colorOnBackground"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:gravity="center"
                android:textColor="?colorOnBackground"
                android:text="@string/ah_5"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/ah_6"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="?colorOnBackground"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/ah_7"
                android:textSize="20sp"
                android:textColor="?colorOnBackground"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?colorOnBackground"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/ah_8"
                android:textSize="15sp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="170dp"
                android:layout_height="110dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:src="@drawable/help_ez_bar"
                app:tintMode="multiply"
                android:tint="?colorOnBackground"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:textColor="?colorOnBackground"
                android:text="@string/ah_9"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="170dp"
                android:layout_height="110dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:src="@drawable/help_select_weight"
                app:tintMode="multiply"
                android:tint="?colorOnBackground"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:textColor="?colorOnBackground"
                android:text="@string/ah_10"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:textColor="?colorOnBackground"
                android:text="@string/ah_11"
                android:textSize="15sp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="170dp"
                android:layout_height="110dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:src="@drawable/help_assembled_bar"
                app:tintMode="multiply"
                android:tint="?colorOnBackground"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:gravity="center"
                android:textColor="?colorOnBackground"
                android:text="@string/ah_12"
                android:textSize="20sp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>