<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/dialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline9"
        app:layout_constraintStart_toStartOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp">

                <ImageView
                    android:id="@+id/cheese_image"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginRight="8dp"
                    android:scaleType="fitStart"
                    android:tint="?colorOnSurface"
                    app:layout_constraintBottom_toBottomOf="@+id/textView7"
                    app:layout_constraintEnd_toStartOf="@+id/textView7"
                    app:layout_constraintTop_toTopOf="@+id/textView7"
                    app:srcCompat="@drawable/settings" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="24dp"
                    android:text="@string/fssu_title"
                    android:textAppearance="?textAppearanceHeadline5"
                    app:layout_constraintBottom_toTopOf="@+id/textView8"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/fssu_message"
                    android:textAppearance="?textAppearanceBody1"
                    app:layout_constraintBottom_toTopOf="@+id/radioGroup"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView7" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@+id/nextButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView8">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radioButtonKilogram"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:checked="true"
                        android:text="@string/fssu_kilogram"
                        android:textAppearance="?textAppearanceBody1"
                        android:textColor="?colorOnSurface" />

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        android:id="@+id/radioButtonPound"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fssu_pound"
                        android:textAppearance="?textAppearanceBody1"
                        android:textColor="?colorOnSurface" />
                </RadioGroup>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/nextButton"
                    style="?materialButtonOutlinedStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="startStopWeightCalc"
                    android:text="@string/fssu_next"
                    android:layout_marginTop="24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>
    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>